# super-looper

./: .gitignore  CHANGELOG.md  IMPROVEMENT-TODO.md  LICENSE  PHASE-2-SPEC.md  README.md  REVIEW-2026-06-21.md  SCOPE.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
case-studies/: headroom-ast-compression.md
case-studies/headroom-ast-compression/: case-study.json
docs/: first-five-minutes.md
evals/: EVAL.md  baseline.json  results.example.jsonl  results.sample.jsonl  run_skill_eval.py  scenarios.jsonl  score_eval.py
examples/: headroom-ast-compression.answers.json  headroom-ast-compression.loop.json  nightly-export.loop.json  ts-client.answers.json  unknown-gate.answers.json  untrusted-suite.loop.json
references/: evidence.md  failure-modes.md  loop-spec-templates.md  remote-runners.md  repo-discovery.md  state-and-verification.md
schemas/: loop-spec.schema.json
scripts/: clean_release_artifacts.py  design_loop.py  test_case_study.py  test_cli.py  test_cli_lazy.py  test_design_loop.py  test_release_hygiene.py  test_remote_runner.py  test_repo_audit.py  test_run_skill_eval.py  test_runtime.py  test_score_eval.py  test_validate_loop_spec.py  validate_loop_spec.py
src/super_looper/: __init__.py  __main__.py  case_study.py  cli.py  design.py  remote_runner.py  repo_audit.py  runtime.py  validate.py
src/super_looper/experimental/: __init__.py  case_study.py  remote_runner.py  repo_audit.py
src/super_looper/resources/: __init__.py  loop-spec.schema.json
